@@ -5,6 +5,7 @@
 * #263 Now Selenide does **not** allow to download file via invisible link
 * #206 Method `switchTo(alert())` now waits until alert appears
 * #206 Method `switchTo(frame())` now waits until frame appears
+* #271 Method `switchTo(window())` now waits until window/tab appears
 * Added methods `byName`, `byXpath`, `byLinkText`, `byPartialLinkText`,`byId` for Selectors duplicating Selenium `By.*` methods
 * Bugfix: `Condition.exactTextCaseSensitiv` now fails searchText is only a substring.
 * Deprecated `$(WebElement,...) $$(WebElement,..)` - use ``$(WebElement).$(...) instead
